# pascal-part-hss

./: .gitignore  README.md  evaluate.py  pyproject.toml
assignment/: text.md
notebooks/: data_exploration.ipynb  deeplabv3.ipynb  dino_backbone.ipynb  fcn_resnet101_long.ipynb  fcn_resnet101_weighted.ipynb  resnet101_analytics.ipynb  sample.ipynb  segformers_transformer_training.ipynb
notebooks/models/: dino_backbone.ipynb  resnet101.ipynb  resnet50.ipynb  segformers.ipynb
source/: constants.py
source/data/: __init__.py  pascal_part.py  pascal_part_small.py
source/dataset/: __init__.py  pascal_part.py
source/modules/: __init__.py  resnet.py  view.py
source/utils/: __init__.py  logging.py  losses.py  metrics.py
