[project]
name = "pascal-part-hss"
version = "0.1.0"
description = "Experiments with pascal part hierarcical semantic segmentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib",
    "numpy>=1.26.4",
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "transformers",
    "gdown",
    "black"
]

[tool.hatch.build.targets.wheel]
packages = ["source"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
